aws-eks-setup/eks/eks-worker-nodes.tf
##################################################
## Elastic Kubernetes Service Worker nodes
##################################################

#
# EKS Worker Nodes Resources
#  * IAM role allowing Kubernetes actions to access other AWS services
#  * EC2 Security Group to allow networking traffic
#  * Data source to fetch latest EKS worker AMI
#  * AutoScaling Launch Configuration to configure worker instances
#  * AutoScaling Group to launch worker instances
#

resource "aws_iam_role" "aws-us-west2-preview-node" {
  name = "${var.application-name}-node"

  assume_role_policy = <<POLICY
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Principal": {
        "Service": "ec2.amazonaws.com"
      },
      "Action": "sts:AssumeRole"
    }
  ]
}
POLICY
}

resource "aws_iam_role_policy_attachment" "aws-us-west2-preview-node-AmazonEKSWorkerNodePolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"
  role       = "${aws_iam_role.aws-us-west2-preview-node.name}"
}

resource "aws_iam_role_policy_attachment" "aws-us-west2-preview-node-AmazonEKS_CNI_Policy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"
  role       = "${aws_iam_role.aws-us-west2-preview-node.name}"
}

resource "aws_iam_role_policy_attachment" "aws-us-west2-preview-node-AmazonEC2ContainerRegistryReadOnly" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
  role       = "${aws_iam_role.aws-us-west2-preview-node.name}"
}

resource "aws_iam_instance_profile" "aws-us-west2-preview-node" {
  name = "${var.application-name}"
  role = "${aws_iam_role.aws-us-west2-preview-node.name}"
}

resource "aws_security_group" "aws-us-west2-preview-node-sg" {
  name        = "${var.application-name}-node-sg"
  description = "Security group for all nodes in the cluster"
  vpc_id      = "${aws_vpc.aws-us-west2-preview.id}"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.application-name}"
  }
}

resource "aws_security_group_rule" "aws-us-west2-preview-node-ingress-self" {
  description              = "Allow node to communicate with each other"
  from_port                = 0
  protocol                 = "-1"
  security_group_id        = "${aws_security_group.aws-us-west2-preview-node-sg.id}"
  source_security_group_id = "${aws_security_group.aws-us-west2-preview-node-sg.id}"
  to_port                  = 65535
  type                     = "ingress"
}

resource "aws_security_group_rule" "aws-us-west2-preview-node-ingress-cluster" {
  description              = "Allow worker Kubelets and pods to receive communication from the cluster control plane"
  from_port                = 1025
  protocol                 = "tcp"
  security_group_id        = "${aws_security_group.aws-us-west2-preview-node-sg.id}"
  source_security_group_id = "${aws_security_group.aws-us-west2-preview-cluster.id}"
  to_port                  = 65535
  type                     = "ingress"
}

# data "aws_ami" "eks-worker" {
#   filter {
#     name   = "name"
#     values = ["eks-worker-*"]
#   }

#   most_recent = true
#   owners      = ["589061170167"] # Amazon
# }

data "aws_ami" "eks-worker" {
  filter {
    name   = "name"
    values = ["eks-worker-*"]
  }

  most_recent = true
  owners      = ["602401143452"] # Amazon
}
# data "aws_ami" "eks-worker" {
#   filter {
#     name   = "name"
#     values = ["eks-worker-*"]
#     #values = ["amazon-eks-*"]
#     #values = ["amazon-eks-node-*"]
#     #values = ["amazon-eks-node-${aws_eks_cluster.aws-us-west2-preview.version}-v*"]
#   }
#   most_recent = true
#   owners      = ["602401143452"] # Amazon
# }
# EKS currently documents this required userdata for EKS worker nodes to
# properly configure Kubernetes applications on the EC2 instance.
# We utilize a Terraform local here to simplify Base64 encoding this
# information into the AutoScaling Launch Configuration.
# More information: https://amazon-eks.s3-us-west-2.amazonaws.com/1.10.3/2018-06-05/amazon-eks-nodegroup.yaml
locals {
  aws-us-west2-preview-node-userdata = <<USERDATA
#!/bin/bash -xe

CA_CERTIFICATE_DIRECTORY=/etc/kubernetes/pki
CA_CERTIFICATE_FILE_PATH=$CA_CERTIFICATE_DIRECTORY/ca.crt
mkdir -p $CA_CERTIFICATE_DIRECTORY
echo "${aws_eks_cluster.aws-us-west2-preview.certificate_authority.0.data}" | base64 -d >  $CA_CERTIFICATE_FILE_PATH
INTERNAL_IP=$(curl -s http://169.254.169.254/latest/meta-data/local-ipv4)
sed -i s,MASTER_ENDPOINT,${aws_eks_cluster.aws-us-west2-preview.endpoint},g /var/lib/kubelet/kubeconfig
sed -i s,CLUSTER_NAME,${var.application-name},g /var/lib/kubelet/kubeconfig
sed -i s,REGION,${data.aws_region.current.name},g /etc/systemd/system/kubelet.service
sed -i s,MAX_PODS,20,g /etc/systemd/system/kubelet.service
sed -i s,MASTER_ENDPOINT,${aws_eks_cluster.aws-us-west2-preview.endpoint},g /etc/systemd/system/kubelet.service
sed -i s,INTERNAL_IP,$INTERNAL_IP,g /etc/systemd/system/kubelet.service
DNS_CLUSTER_IP=10.100.0.10
if [[ $INTERNAL_IP == 10.* ]] ; then DNS_CLUSTER_IP=172.20.0.10; fi
sed -i s,DNS_CLUSTER_IP,$DNS_CLUSTER_IP,g /etc/systemd/system/kubelet.service
sed -i s,CERTIFICATE_AUTHORITY_FILE,$CA_CERTIFICATE_FILE_PATH,g /var/lib/kubelet/kubeconfig
sed -i s,CLIENT_CA_FILE,$CA_CERTIFICATE_FILE_PATH,g  /etc/systemd/system/kubelet.service
systemctl daemon-reload
systemctl restart kubelet
USERDATA
}

resource "aws_launch_configuration" "aws-us-west2-preview-lc" {
  associate_public_ip_address = true
  iam_instance_profile        = "${aws_iam_instance_profile.aws-us-west2-preview-node.name}"
  image_id                    = "${data.aws_ami.eks-worker.id}"
  instance_type               = "m5a.xlarge"
  name_prefix                 = "${var.application-name}"
  security_groups             = ["${aws_security_group.aws-us-west2-preview-node-sg.id}"]
  user_data_base64            = "${base64encode(local.aws-us-west2-preview-node-userdata)}"
  key_name                    = "${var.key_pair_name}"

  lifecycle {
    create_before_destroy = true
  }
  #depends_on                = ["${var.igw}"]
}

resource "aws_autoscaling_group" "aws-us-west2-preview-asg" {
  name                 = "aws-us-west2-preview-asg"
  desired_capacity     = 3
  launch_configuration = "${aws_launch_configuration.aws-us-west2-preview-lc.id}"
  max_size             = 6
  min_size             = 3
  name                 = "${var.application-name}"
  vpc_zone_identifier  = ["${aws_subnet.aws-us-west2-preview.*.id}"]
  

  tag {
    key                 = "Name"
    value               = "${var.application-name}"
    propagate_at_launch = true
  }

  tag {
    key                 = "kubernetes.io/cluster/${var.application-name}"
    value               = "owned"
    propagate_at_launch = true
  }
}

resource "aws_autoscaling_policy" "eks-cpu-policy" {
name = "eks-cpu-policy"
autoscaling_group_name = "${aws_autoscaling_group.aws-us-west2-preview-asg.name}"
adjustment_type = "ChangeInCapacity"
scaling_adjustment = "1"
cooldown = "300"
policy_type = "SimpleScaling"
}
resource "aws_cloudwatch_metric_alarm" "eks-cpu-alarm" {
alarm_name = "eks-cpu-alarm"
alarm_description = "eks-cpu-alarm"
comparison_operator = "GreaterThanOrEqualToThreshold"
evaluation_periods = "2"
metric_name = "CPUUtilization"
namespace = "AWS/EC2"
period = "120"
statistic = "Average"
threshold = "50"
dimensions = {
"AutoScalingGroupName" = "${aws_autoscaling_group.aws-us-west2-preview-asg.name}"
}
actions_enabled = true
alarm_actions = ["${aws_autoscaling_policy.eks-cpu-policy.arn}"]
}
# scale down alarm
resource "aws_autoscaling_policy" "eks-cpu-policy-scaledown" {
name = "eks-cpu-policy-scaledown"
autoscaling_group_name = "${aws_autoscaling_group.aws-us-west2-preview-asg.name}"
adjustment_type = "ChangeInCapacity"
scaling_adjustment = "-1"
cooldown = "300"
policy_type = "SimpleScaling"
}
resource "aws_cloudwatch_metric_alarm" "eks-cpu-alarm-scaledown" {
alarm_name = "eks-cpu-alarm-scaledown"
alarm_description = "eks-cpu-alarm-scaledown"
comparison_operator = "LessThanOrEqualToThreshold"
evaluation_periods = "2"
metric_name = "CPUUtilization"
namespace = "AWS/EC2"
period = "120"
statistic = "Average"
threshold = "5"
dimensions = {
"AutoScalingGroupName" = "${aws_autoscaling_group.aws-us-west2-preview-asg.name}"
}
actions_enabled = true
alarm_actions = ["${aws_autoscaling_policy.eks-cpu-policy-scaledown.arn}"]
}
